--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
    SPDX-FileCopyrightText: © Vegard IT GmbH (https://vegardit.com)
+   SPDX-FileContributor: Sebastian Thomschke
    SPDX-License-Identifier: Apache-2.0
+   SPDX-ArtifactOfProjectHomePage: https://github.com/vegardit/vegardit-maven-parent
 
    check for new dependency/plugin updates using:
       mvn -U versions:display-dependency-updates versions:display-plugin-updates
    plugin announcements: https://blogs.apache.org/maven/
-
-   @author Sebastian Thomschke, Vegard IT GmbH
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 
