--- a/pom.xml
+++ b/pom.xml
@@ -1892,7 +1892,6 @@
 
       <profile>
          <id>deploy-snapshots-to-github</id>
-
          <activation>
             <property>
                <name>env.DEPLOY_SNAPSHOTS_TO_GITHUB_BRANCH</name>
@@ -2018,95 +2017,7 @@
 
 
       <profile>
-         <id>jrebel-config</id>
-         <!-- only activated if executed within Eclipse and if rebel-remote.xml is present, requires Maven 3.2.2 or higher, see https://issues.apache.org/jira/browse/MNG-4565 -->
-         <activation>
-            <property>
-               <name>eclipse.application</name>
-            </property>
-            <file>
-               <exists>src/main/resources/rebel-remote.xml</exists>
-            </file>
-         </activation>
-
-         <build>
-            <plugins>
-               <plugin>
-                  <groupId>org.zeroturnaround</groupId>
-                  <artifactId>jrebel-maven-plugin</artifactId>
-                  <version>1.2.0</version>
-                  <executions>
-                     <execution>
-                        <id>generate-rebel-xml</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                           <goal>generate</goal>
-                        </goals>
-                     </execution>
-                  </executions>
-                  <configuration>
-                     <addResourcesDirToRebelXml>true</addResourcesDirToRebelXml>
-                     <alwaysGenerate>false</alwaysGenerate>
-                     <showGenerated>true</showGenerated>
-                     <generateDefaultElements>true</generateDefaultElements>
-                  </configuration>
-               </plugin>
-            </plugins>
-
-            <pluginManagement>
-               <plugins>
-                  <plugin>
-                     <artifactId>maven-war-plugin</artifactId>
-                     <configuration>
-                        <packagingExcludes>**/rebel.xml</packagingExcludes>
-                     </configuration>
-                  </plugin>
-                  <plugin>
-                     <artifactId>maven-jar-plugin</artifactId>
-                     <configuration>
-                        <excludes>
-                           <exclude>**/rebel.xml</exclude>
-                        </excludes>
-                     </configuration>
-                  </plugin>
-               </plugins>
-            </pluginManagement>
-         </build>
-      </profile>
-
-
-      <profile>
-         <id>outside-eclipse</id>
-         <activation>
-            <property>
-               <name>!eclipse.application</name>
-            </property>
-         </activation>
-         <properties>
-            <webClassifier>classes</webClassifier>
-         </properties>
-         <build>
-            <plugins>
-               <plugin>
-                  <artifactId>maven-compiler-plugin</artifactId>
-                  <executions>
-                     <execution>
-                        <id>default-compile</id>
-                        <phase>none</phase>
-                     </execution>
-                     <execution>
-                        <id>default-testCompile</id>
-                        <phase>none</phase>
-                     </execution>
-                  </executions>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-
-      <profile>
          <id>deploy-releases-to-maven-central</id>
-
          <activation>
             <property>
                <!--
@@ -2168,15 +2079,104 @@
          </build>
       </profile>
 
+
       <profile>
-         <id>inside-eclipse</id>
+         <id>internal.jrebel-config</id>
+         <!-- only activated if executed within Eclipse and if rebel-remote.xml is present, requires Maven 3.2.2 or higher, see https://issues.apache.org/jira/browse/MNG-4565 -->
+         <activation>
+            <property>
+               <name>eclipse.application</name>
+            </property>
+            <file>
+               <exists>src/main/resources/rebel-remote.xml</exists>
+            </file>
+         </activation>
+
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.zeroturnaround</groupId>
+                  <artifactId>jrebel-maven-plugin</artifactId>
+                  <version>1.2.0</version>
+                  <executions>
+                     <execution>
+                        <id>generate-rebel-xml</id>
+                        <phase>process-resources</phase>
+                        <goals>
+                           <goal>generate</goal>
+                        </goals>
+                     </execution>
+                  </executions>
+                  <configuration>
+                     <addResourcesDirToRebelXml>true</addResourcesDirToRebelXml>
+                     <alwaysGenerate>false</alwaysGenerate>
+                     <showGenerated>true</showGenerated>
+                     <generateDefaultElements>true</generateDefaultElements>
+                  </configuration>
+               </plugin>
+            </plugins>
+
+            <pluginManagement>
+               <plugins>
+                  <plugin>
+                     <artifactId>maven-war-plugin</artifactId>
+                     <configuration>
+                        <packagingExcludes>**/rebel.xml</packagingExcludes>
+                     </configuration>
+                  </plugin>
+                  <plugin>
+                     <artifactId>maven-jar-plugin</artifactId>
+                     <configuration>
+                        <excludes>
+                           <exclude>**/rebel.xml</exclude>
+                        </excludes>
+                     </configuration>
+                  </plugin>
+               </plugins>
+            </pluginManagement>
+         </build>
+      </profile>
+
+
+      <profile>
+         <id>internal.outside-eclipse</id>
+         <activation>
+            <property>
+               <name>!eclipse.application</name>
+            </property>
+         </activation>
+         <properties>
+            <webClassifier>classes</webClassifier>
+         </properties>
+         <build>
+            <plugins>
+               <plugin>
+                  <artifactId>maven-compiler-plugin</artifactId>
+                  <executions>
+                     <execution>
+                        <id>default-compile</id>
+                        <phase>none</phase>
+                     </execution>
+                     <execution>
+                        <id>default-testCompile</id>
+                        <phase>none</phase>
+                     </execution>
+                  </executions>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+
+
+      <profile>
+         <id>internal.inside-eclipse</id>
          <activation>
             <property>
                <name>eclipse.application</name>
             </property>
          </activation>
          <properties>
-            <!-- see "How do I add my web project classes to another project's classpath" http://wiki.eclipse.org/M2E-WTP_FAQ#How_do_I_add_my_web_project_classes_to_another_project.27s_classpath.3F -->
+            <!-- see "How do I add my web project classes to another project's classpath" https://wiki.eclipse.org/M2E-WTP_FAQ#How_do_I_add_my_web_project_classes_to_another_project.27s_classpath.3F -->
             <webClassifier />
          </properties>
          <build>
