make dependabot ignore co.leantechniques:maven-buildtime-extension

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -27,3 +27,5 @@ updates:
     labels:
       - mvn
       - dependencies
+    ignore:
+      - dependency-name: "co.leantechniques:maven-buildtime-extension"
