--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,7 @@ updates:
     labels:
       - gha
       - dependencies
+      - pinned
   - package-ecosystem: maven
     directory: /
     schedule:
@@ -27,5 +28,6 @@ updates:
     labels:
       - mvn
       - dependencies
+      - pinned
     ignore:
       - dependency-name: "co.leantechniques:maven-buildtime-extension"
