update project config

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 # SPDX-FileCopyrightText: © Vegard IT GmbH (https://vegardit.com)
-# SPDX-FileContributor: Sebastian Thomschke
+# SPDX-FileContributor: Sebastian Thomschke (Vegard IT GmbH)
 # SPDX-License-Identifier: Apache-2.0
 # SPDX-ArtifactOfProjectHomePage: https://github.com/vegardit/vegardit-maven-parent
 #
@@ -19,6 +19,12 @@ on:
     - '.git*'
     - '.github/*.yml'
   pull_request:
+    paths-ignore:
+    - '**/*.adoc'
+    - '**/*.md'
+    - '.editorconfig'
+    - '.git*'
+    - '.github/*.yml'
   workflow_dispatch:
     # https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/
     inputs:
@@ -26,6 +32,15 @@ on:
         description: 'Additional Maven Args'
         required: false
         default: ''
+      debug-with-ssh:
+        description: "Start an SSH session for debugging purposes at the end of the build:"
+        default: never
+        type: choice
+        options: [ always, on_failure, on_failure_or_cancelled, never ]
+      debug-with-ssh-only-for-actor:
+        description: "Limit access to the SSH session to the GitHub user that triggered the job."
+        default: true
+        type: boolean
 
 defaults:
   run:
@@ -34,21 +49,36 @@ defaults:
 env:
   JAVA_VERSION: 11
 
+
 jobs:
-  build:
+
+  ###########################################################
+  maven-build:
+  ###########################################################
     runs-on: ubuntu-latest
+
+
+    # https://docs.github.com/en/actions/using-jobs/using-concurrency
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.ref }}
+      cancel-in-progress: false
+
+
     steps:
     - name: Show environment variables
       run: env | sort
 
-    - name: Git Checkout
-      uses: actions/checkout@v4 #https://github.com/actions/checkout
 
-    - name: Set up JDK ${{ env.JAVA_VERSION }}
-      uses: actions/setup-java@v4 #https://github.com/actions/setup-java
+    - name: Git Checkout
+      uses: actions/checkout@v4 # https://github.com/actions/checkout
+
+
+    - name: "Install: JDK ${{ env.JAVA_VERSION }}"
+      uses: actions/setup-java@v4 # https://github.com/actions/setup-java
       with:
         distribution: temurin
         java-version: ${{ env.JAVA_VERSION }}
+
 
     # reusing CDS archives of the same JVM randomly fails in GitHub Actions with
     # "An error has occurred while processing the shared archive file. shared class paths mismatch"
@@ -63,6 +93,7 @@ jobs:
     #      ~/.xshare/${{ steps.java-version-checksum.outputs.md5sum }}
     #    key: ${{ runner.os }}-xshare-${{ steps.java-version-checksum.outputs.md5sum }}
 
+
     - name: "Cache: Restore"
       id: cache-restore
       if: ${{ !env.ACT }} # https://github.com/nektos/act#skipping-steps
@@ -74,8 +105,8 @@ jobs:
           !~/.m2/repository/com/vegardit/maven
         key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
 
+
     - name: Test with Maven
-      id: maven-test
       if: ${{ github.ref_name != 'main' || env.ACT }}
       env:
         GITHUB_USER: ${{ github.actor }}
@@ -84,8 +115,8 @@ jobs:
       run: |
         bash .ci/build.sh ${{ github.event.inputs.additional_maven_args }}
 
+
     - name: Build with Maven
-      id: maven-build
       if: ${{ github.ref_name == 'main' && !env.ACT }}
       env:
         DEPLOY_SNAPSHOTS_TO_GITHUB_BRANCH: true
@@ -107,7 +138,7 @@ jobs:
 
     ##################################################
     # Cache Update
-    # See https://github.com/actions/cache/issues/342
+    # See https://github.com/actions/cache/issues/342#issuecomment-1399442670
     ##################################################
     - name: "Cache: Delete Previous"
       if: ${{ steps.cache-restore.outputs.cache-hit && !env.ACT }}
@@ -126,11 +157,41 @@ jobs:
           ~/.m2/bin
           ~/.m2/repository
           !~/.m2/repository/com/vegardit/maven
+          !~/.m2/repository/*SNAPSHOT*
         key: ${{ steps.cache-restore.outputs.cache-primary-key }}
 
 
+    ##################################################
+    # Setup SSH debug session
+    ##################################################
+    - name: "SSH session for debugging: check"
+      id: DEBUG_SSH_SESSSION_CHECK
+      if: always()
+      run: |
+        set -eu
+
+        when="${{ inputs.debug-with-ssh }}"
+
+        if [[ $when == "always" ]] || case "${{ job.status }}" in
+          success)   [[ $when == "always" ]] ;;
+          cancelled) [[ $when == "on_failure_or_cancelled" ]] ;;
+          failure)   [[ $when == "on_failure"* ]] ;;
+        esac; then
+          echo "start_ssh_session=true" | tee -a "$GITHUB_OUTPUT"
+        fi
+
+
+    - name: "SSH session for debugging: start"
+      uses: mxschmitt/action-tmate@v3 # https://github.com/mxschmitt/action-tmate
+      if: always() && steps.DEBUG_SSH_SESSSION_CHECK.outputs.start_ssh_session
+      with:
+        limit-access-to-actor: ${{ inputs.debug-with-ssh-only-for-actor }}
+
+
+  ###########################################################
   dependabot-pr-auto-merge:
-    needs: build
+  ###########################################################
+    needs: maven-build
     if: ${{ github.event_name == 'pull_request' && github.actor == 'dependabot[bot]' }}
     runs-on: ubuntu-latest
 
@@ -146,6 +207,7 @@ jobs:
       uses: dependabot/fetch-metadata@v1 # https://github.com/dependabot/fetch-metadata/
       with:
         github-token: "${{ secrets.GITHUB_TOKEN }}"
+
 
     - name: Enable auto-merge for Dependabot PRs
       if: |
