--- a/pom.xml
+++ b/pom.xml
@@ -1258,6 +1258,9 @@
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.16.2</version>
+               <configuration>
+                  <ignoredVersions>.*-(alpha|beta|M|RC|SNAPSHOT)([-_0-9].*)?</ignoredVersions>
+               </configuration>
             </plugin>
 
             <plugin>
