--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,9 +8,9 @@ name: Build
 
 on:
   push:
-    branches-ignore: # build all branches except:
-    - 'dependabot/**' # prevent GHA triggered twice (once for commit to the branch and once for opening/syncing the PR)
-    tags-ignore: # don't build tags
+    branches-ignore:  # build all branches except:
+    - 'dependabot/**'  # prevent GHA triggered twice (once for commit to the branch and once for opening/syncing the PR)
+    tags-ignore:  # don't build tags
     - '**'
     paths-ignore:
     - '**/*.adoc'
@@ -18,6 +18,7 @@ on:
     - '.editorconfig'
     - '.git*'
     - '.github/*.yml'
+    - '.github/workflows/stale.yml'
   pull_request:
     paths-ignore:
     - '**/*.adoc'
@@ -70,18 +71,18 @@ jobs:
 
 
     - name: Git Checkout
-      uses: actions/checkout@v4 # https://github.com/actions/checkout
+      uses: actions/checkout@v4  # https://github.com/actions/checkout
 
 
     - name: "Install: JDK ${{ env.JAVA_VERSION }}"
-      uses: actions/setup-java@v4 # https://github.com/actions/setup-java
+      uses: actions/setup-java@v4  # https://github.com/actions/setup-java
       with:
         distribution: temurin
         java-version: ${{ env.JAVA_VERSION }}
 
 
     - name: "Install: Maven"
-      uses: stCarolas/setup-maven@v4.5 # https://github.com/stCarolas/setup-maven
+      uses: stCarolas/setup-maven@v5  # https://github.com/stCarolas/setup-maven
       with:
         maven-version: 3.9.6
 
@@ -188,7 +189,7 @@ jobs:
 
 
     - name: "SSH session for debugging: start"
-      uses: mxschmitt/action-tmate@v3 # https://github.com/mxschmitt/action-tmate
+      uses: mxschmitt/action-tmate@v3  # https://github.com/mxschmitt/action-tmate
       if: always() && steps.DEBUG_SSH_SESSSION_CHECK.outputs.start_ssh_session
       with:
         limit-access-to-actor: ${{ inputs.debug-with-ssh-only-for-actor }}
@@ -210,7 +211,7 @@ jobs:
     steps:
     - name: Dependabot metadata
       id: metadata
-      uses: dependabot/fetch-metadata@v2 # https://github.com/dependabot/fetch-metadata/
+      uses: dependabot/fetch-metadata@v2  # https://github.com/dependabot/fetch-metadata/
       with:
         github-token: "${{ secrets.GITHUB_TOKEN }}"
 
