--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,9 +43,11 @@ on:
         default: true
         type: boolean
 
+
 defaults:
   run:
     shell: bash
+
 
 env:
   JAVA_VERSION: 11
@@ -66,7 +68,13 @@ jobs:
 
 
     steps:
-    - name: Show environment variables
+    - name: "Show: GitHub context"
+      env:
+        GITHUB_CONTEXT: ${{ toJSON(github) }}
+      run: echo $GITHUB_CONTEXT
+
+
+    - name: "Show: environment variables"
       run: env | sort
 
 
@@ -74,7 +82,7 @@ jobs:
       uses: actions/checkout@v4  # https://github.com/actions/checkout
 
 
-    - name: "Install: JDK ${{ env.JAVA_VERSION }}"
+    - name: "Install: JDK ${{ env.JAVA_VERSION }} ☕"
       uses: actions/setup-java@v4  # https://github.com/actions/setup-java
       with:
         distribution: temurin
@@ -103,8 +111,8 @@ jobs:
 
     - name: "Cache: Restore"
       id: cache-restore
-      if: ${{ !env.ACT }} # https://github.com/nektos/act#skipping-steps
-      uses: actions/cache/restore@v4 # https://github.com/actions/cache/blob/main/restore/README.md
+      if: ${{ !env.ACT }}  # https://github.com/nektos/act#skipping-steps
+      uses: actions/cache/restore@v4  # https://github.com/actions/cache/blob/main/restore/README.md
       with:
         path: |
           ~/.m2/bin
@@ -123,7 +131,7 @@ jobs:
         bash .ci/build.sh ${{ github.event.inputs.additional_maven_args }}
 
 
-    - name: Build with Maven
+    - name: "Build with Maven 🔨"
       if: ${{ github.ref_name == 'main' && !env.ACT }}
       env:
         DEPLOY_SNAPSHOTS_TO_GITHUB_BRANCH: true
@@ -157,7 +165,7 @@ jobs:
         gh actions-cache delete ${{ steps.cache-restore.outputs.cache-primary-key }} --confirm || true
 
     - name: "Cache: Update"
-      uses: actions/cache/save@v4 # https://github.com/actions/cache/blob/main/save/README.md
+      uses: actions/cache/save@v4  # https://github.com/actions/cache/blob/main/save/README.md
       if: ${{ always() && !cancelled() && !env.ACT }} # save cache even fails
       with:
         path: |
